# quant

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_CONSTITUTION.md  CLAUDE.md  Makefile  README.md  config-template.yml  main.cc  main.py  migrate_db.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: copilot-instructions.md
api/: Pipfile  main.py
configs/: t0_backtest.example.json
db/: docker-compose.yml.template
docs/: BROKER_README.md  README.md  TDD重构方案.md  account_data_architecture.md  architecture.md  cms_server.md  coding-rules.md  daily_export.md  design_tick_cache_optimization.md  healthcheck_service.md  t0-monitor-guide.md  unified_broker_guide.md  watchdog_service.md
kafka/: docker-compose.yml.template
migrations/: README.md  env.py
redis/: docker-compose.yml.template
scripts/: README.md  backfill_trade_executions.py  configure_cms_tailscale_firewall.ps1  configure_healthcheck_tailscale_firewall.ps1  create_scheduled_task.bat  export_minute_history_bundle.py  load_env.sh  register_healthcheck_service_task.ps1  register_watchdog_service_task.ps1  run_console.bat  run_t0_daemon.bat  run_tests.py  runtime_process_control.py  setup_meta_db_sync_task.bat  setup_minute_history_task.bat  setup_t0_tasks.bat  setup_task.bat  setup_task_simple.bat  start_cms_service.bat  start_healthcheck_service.bat  start_healthcheck_service.ps1  start_watchdog_service.bat  start_watchdog_service.ps1  stop_python_by_command.ps1  stop_t0_daemon.bat  stop_trading_service.bat  task_runner.ps1  task_runner.sh  task_wrapper.bat  task_wrapper_meta_db_sync.bat  task_wrapper_minute_history.bat  task_wrapper_t0_daemon.bat  task_wrapper_t0_sync.bat  task_wrapper_trading.bat  unregister_healthcheck_service_task.ps1  unregister_watchdog_service_task.ps1
src/: __init__.py  account_data_service.py  account_position_sync.py  backup_service.py  cms_server.py  config.py  connection_manager.py  daily_exporter.py  daily_pnl_calculator.py  database.py  healthcheck.py  logger_config.py  meta_db.py  minute_history_exporter.py  minute_history_ingestor.py  notifications.py  order_record_costs.py  process_utils.py  qmt_constants.py  quote_stream_service.py  quote_websocket.py  redis_client.py  redis_listener.py  remote_sync.py  stock_info.py  trader.py  trading_calendar_manager.py  trading_costs.py  trading_day_checker.py  trading_engine.py  trading_meta_sync.py  trading_service.py  watchdog_service.py
static/: t0-monitor.html
strategy/: quick_roll.py  turtle_trading_readme.md
templates/: debug.md  implement.md  refactor.md  review.md
tests/: API_TEST_REPORT.md  README.md  __init__.py  check_xtconstant.py  conftest.py  debug_status_50.py  run_tests.py  test_account_data_service.py  test_api_endpoints.py  test_async_trading.py  test_auto_cancel.py  test_backtest_data_loader.py  test_cms_server.py  (+51 more)
trade/: CMakeLists.txt  main.cc
trade/src/api/ctp/: ThostFtdcUserApiDataType.h  error.xml
trade/src/broker/ctp/: md.cc
trade/src/include/: md.h  redis.h  trader.h
trade/src/utils/: log.cc  request.cc
(+332 files in other folders)
