[project]
name = "quant"
version = "0.1.0"
description = "QMT Automated Trading Service with Redis Signal Processing"
readme = "README.md"
requires-python = ">=3.9.8"
dependencies = [
    "pandas>=2.3.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-daemon>=3.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.10.1",
    "schedule>=1.2.0",
    "paramiko>=4.0.0",
    "akshare",
]
