[project]
name = "quant"
version = "0.1.0"
description = "QMT Automated Trading Service with Redis Signal Processing"
readme = "README.md"
requires-python = ">=3.9.8"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pandas>=2.3.1",
    "psycopg[binary]>=3.2.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-daemon>=3.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.10.1",
    "schedule>=1.2.0",
    "akshare",
    "tushare",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "xtquant>=250516.1.1",
    "backtrader>=1.9.78.123",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
(
  ^/migrations/  # exclude a directory in the root of the project (if any)
  | __pycache__
  | .git
  | .venv
  | venv
  | env
  | .env
  | dist
  | build
  | logs
  | backups
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests", "."]
known_first_party = ["src"]
known_local_folder = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["__pycache__", ".git", ".venv", "venv", "env", ".env", "dist", "build", "logs", "backups"]
